[package]
name = "gitiful"
version = "0.1.0"
authors = ["Espen Henriksen <espen@oslomarketsolutions.no>"]
edition = "2018"

[dependencies]
git2 = "0.11.0"
rocket = "0.4.2"
tempfile = "3.1.0"
serde_derive = "1.0.104"
serde = "1.0.104"

[dependencies.regex]
version = "1.3.4"
features = ["pattern"]

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["tera_templates"]

