[package]
name = "gitiful"
version = "0.1.0"
authors = ["Espen Henriksen <espen@oslomarketsolutions.no>"]
edition = "2018"

[dependencies]
git2 = "0.11.0"
tempfile = "3.1.0"
serde_derive = "1.0.104"
serde = "1.0.104"
actix-web = "2.0.0"
actix-rt = "1.0.0"
tera = "1.0.2"
env_logger = "0.7.1"
regex = { version = "1.3.4", features = ["pattern"] }
futures = "0.3.4"
